<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">WanAndroidKolin</string>

    //通用
    <string name="http_error">网络异常</string>
    <string name="unKnown_error">未知错误</string>
    <string name="me">我的</string>
    <string name="knowledge_hierarchy">知识体系</string>
    <string name="home_pager">首页</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="weChat">公众号</string>
    <string name="search_tint">发现更多干货</string>
    <string name="action_search">搜索</string>
    <string name="history_search">搜索历史</string>
    <string name="hot_search">热搜</string>
    <string name="useful_sites">常用网站</string>
    <string name="navigation_drawer_open">打开侧栏</string>
    <string name="navigation_drawer_close">关闭侧栏</string>
    <string name="double_click_exit_tint">再按一次后退键退出WanAndroid</string>
    <string name="ok">是</string>
    <string name="no">否</string>
    <string name="reload">重新加载</string>
    <string name="share_view">shareView</string>
    <string name="loading">正在加载数据...</string>
    <string name="createAccount">没有账号？创建一个</string>
    <string name="haveAccount">已有账号?去登录</string>
    <string name="nav_todo">TODO工具</string>

    //登录
    <string name="login_title">账号密码登录</string>
    <string name="login_account_tint">请输入用户名</string>
    <string name="login_password_tint">请输入密码</string>
    <string name="login_confirm_password_tint">请输入确认密码</string>
    <string name="login_in">登录</string>
    <string name="register_and_login">注册并登录</string>
    <string name="my_collect">收藏</string>
    <string name="about_us">关于我们</string>
    <string name="auto_login_in">自动登录</string>
    <string name="logout">退出登录</string>
    <string name="login_tint">请先登录~~</string>
    <string name="login_success">登录成功n(*≧▽≦*)n</string>
    <string name="account_password_null_tint">用户名或密码不能为空</string>
    <string name="login_fail">登录失败ヽ(≧Д≦)ノ</string>
    <string name="register_fail">注册失败ヽ(≧Д≦)ノ</string>
    <string name="password_not_same">密码不匹配</string>
    <string name="auto_login_success">自动登录成功</string>
    <string name="login_ing">登录中...</string>
    <string name="register_ing">注册中...</string>
    <string name="username_not_empty">用户名不能为空</string>
    <string name="password_not_empty">密码不能为空</string>
    <string name="repassword_not_empty">确认密码不能为空</string>
    <string name="password_not_equals_repassword">两次密码输入不一致</string>
    <string name="NoData">没有数据</string>
    <string name="loginOut_ing">正在退出登录...</string>

    //收藏
    <string name="no_collect">大侠，赶快存点干货吧~</string>

    //主页
    <string name="item_article_author">作者：<xliff:g id="author">%s</xliff:g></string>
    <string name="item_article_classify">分类：<xliff:g id="classify">%s</xliff:g></string>
    <string name="item_article_time">时间：<xliff:g id="time">%s</xliff:g></string>
    <string name="install">安装</string>
    <string name="logout_tint">退出登录?</string>
    <string name="failed_to_obtain_banner_data">获取广告数据失败</string>
    <string name="failed_to_obtain_article_list">获取文章列表数据失败</string>

    //知识体系
    <string name="failed_to_obtain_knowledge_data">获取知识体系数据列表失败</string>

    //导航
    <string name="navigation_tint">%1$s 导航资源持续更新中</string>
    <string name="failed_to_obtain_navigation_list">获取导航数据列表失败</string>

    //项目
    <string name="failed_to_obtain_project_list">获取项目数据列表失败</string>
    <string name="failed_to_obtain_project_classify_data">获取项目分类数据列表失败</string>

    //文章详情
    <string name="share">分享</string>
    <string name="collect">收藏</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_fail">收藏失败</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="cancel_collect_fail">取消收藏失败</string>
    <string name="failed_to_obtain_collection_data">获取收藏数据失败</string>
    <string name="open_it_with_browser">用系统浏览器打开</string>
    <string name="share_type_url">%1$s分享【%2$s】专题：%3$s</string>
    <string name="write_permission_not_allowed">获取写入权限失败</string>

    //搜索
    <string name="failed_to_obtain_search_data_list">获取搜索数据列表失败</string>
    <string name="failed_to_obtain_top_data">获取热门数据失败</string>
    <string name="failed_to_obtain_useful_sites_data">获取常用网站数据失败</string>
    <string name="or">或</string>
    <string name="clear_all">清空</string>
    <string name="search_null_tint">快来搜点干货吧*≧▽≦*</string>

    //设置
    <string name="setting_normal">通用设置</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_show_top">首页文章置顶</string>
    <string name="setting_no_photo_mode_summary">开启后在非Wifi环境下不加载图片</string>
    <string name="setting_show_top_summary">开启后将不会显示首页置顶文章</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_other">其它设置</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清除缓存</string>
    <string name="clear_success">清理成功</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="send_email">选择邮件客户端:</string>
    <string name="load_more_no_data">没有多余的干货了(*≧Д≦*)</string>
    <string name="register_account_hint">邮箱/手机号</string>
    <string name="register_password_hint">输入密码</string>
    <string name="register_confirm_password_hint">确认密码</string>
    <string name="register_success">注册成功</string>
    <string name="choose_theme_color">主题颜色</string>
    <string name="choose_theme_color_summary">自定义主题颜色</string>
    <string name="back">返回</string>
    <string name="done">完成</string>
    <string name="cancel">取消</string>
    <string name="custom">自定义</string>
    <string name="version">版本</string>

    <!-- TODO工具 -->
    <string name="delete_success">删除成功</string>
    <string name="delete">删除</string>
    <string name="mark_done">标为已完成</string>
    <string name="restore">复原</string>
    <string name="completed">已完成</string>
    <string name="confirm_delete">确认删除</string>
    <string name="add">新增</string>
    <string name="no_todo">待办</string>
    <string name="save">保存</string>
    <string name="non_compulsory">非必填</string>
    <string name="details">详情：</string>
    <string name="compulsory">必填</string>
    <string name="title">标题：</string>
    <string name="date">日期：</string>
    <string name="title_tip">标题不能为空！</string>
    <string name="save_success">保存成功</string>
    <string name="edit">编辑</string>
    <string name="see">查看</string>
    <string name="save_ing">正在保存...</string>
    <string name="update_success">更新成功</string>
    <string name="mark_top">置顶</string>


</resources>
