<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/tab_home_pager"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home_pager"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_knowledge_hierarchy"
        android:enabled="true"
        android:icon="@drawable/icon_knowledge_hierarchy_not_selected"
        android:title="@string/knowledge_hierarchy"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_weChat"
        android:enabled="true"
        android:icon="@drawable/wechat"
        android:title="@string/weChat"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_navigation"
        android:enabled="true"
        android:icon="@drawable/navigation"
        android:title="@string/navigation"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tab_project"
        android:enabled="true"
        android:icon="@drawable/project"
        android:title="@string/project"
        app:showAsAction="ifRoom" />
</menu>
