<?xml version="1.0" encoding="utf-8"?>
<com.mcxtzhang.swipemenulib.SwipeMenuLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_100"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:ios="false"
    android:clickable="true"
    android:padding="@dimen/dp_5"
    app:leftSwipe="true"
    app:swipeEnable="true">
    <RelativeLayout
        android:id="@+id/item_todo_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10">

        <TextView
            android:id="@+id/tv_todo_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textColor="@color/Grey500"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_todo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_todo_date"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/app_name"
            android:textColor="@color/item_title"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_todo_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_todo_title"
            android:layout_below="@id/tv_todo_title"
            android:layout_marginTop="@dimen/dp_10"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/app_name"
            android:textColor="@color/item_desc"
            android:textSize="@dimen/sp_16" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_top"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg_top"
        android:paddingLeft="@dimen/dp_6"
        android:paddingRight="@dimen/dp_6"
        android:textSize="@dimen/sp_12"
        android:text="@string/mark_top"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg_done"
        android:paddingLeft="@dimen/dp_6"
        android:paddingRight="@dimen/dp_6"
        android:text="@string/mark_done"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/bg_delete"
        android:paddingLeft="@dimen/dp_6"
        android:paddingRight="@dimen/dp_6"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_12" />

</com.mcxtzhang.swipemenulib.SwipeMenuLayout>