<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_group"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/register_toolbar"
        style="@style/AppTheme.Toolbar"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/login_iv"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:src="@mipmap/ic_default_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_45"
        android:layout_below="@+id/login_toolbar" />

    <LinearLayout
        android:id="@+id/login_account_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_12"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_below="@id/login_iv"
        android:gravity="center">
        <ImageView
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:src="@drawable/ic_account"
            android:contentDescription="@null" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_account_edit"
                style="@style/style_circle_edit"
                android:hint="@string/login_account_tint"
                android:layout_marginStart="@dimen/dp_6"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <View
        android:id="@+id/login_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/Grey300"
        android:layout_below="@id/login_account_group"
        android:layout_marginStart="@dimen/dp_64"
        android:layout_marginEnd="@dimen/dp_64" />

    <LinearLayout
        android:id="@+id/login_password_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_12"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_1"
        android:layout_below="@id/login_divider"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:src="@drawable/ic_password"
            android:contentDescription="@null" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_password_edit"
                style="@style/style_circle_edit"
                android:hint="@string/login_password_tint"
                android:inputType="textPassword"
                android:layout_marginStart="@dimen/dp_6" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <View
        android:id="@+id/register_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/Grey300"
        android:layout_below="@id/login_password_group"
        android:layout_marginStart="@dimen/dp_64"
        android:layout_marginEnd="@dimen/dp_64" />

    <LinearLayout
        android:id="@+id/repassword_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/dp_12"
        android:layout_marginStart="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_48"
        android:layout_marginTop="@dimen/dp_1"
        android:layout_below="@id/register_divider"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:src="@drawable/ic_password"
            android:contentDescription="@null" />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/register_repassword_edit"
                style="@style/style_circle_edit"
                android:hint="@string/login_confirm_password_tint"
                android:inputType="textPassword"
                android:layout_marginStart="@dimen/dp_6" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/Grey300"
        android:layout_below="@id/repassword_group"
        android:layout_marginStart="@dimen/dp_64"
        android:layout_marginEnd="@dimen/dp_64" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/register_divider"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_32"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/register_btn"
            style="@style/style_circle_btn"
            android:background="@drawable/bg_conner_bottom_blue"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/register_and_login" />
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login"
            android:textColor="@color/Blue"
            android:text="@string/haveAccount"
            android:textSize="@dimen/sp_16"
            android:gravity="center"/>
    </LinearLayout>
</RelativeLayout>
